Mantis ChangeLog

2003.??.??  -  0.18.0a3

 * Enhancement: When an enumeration is not found, display @<enumid>@ instead of @null@.
 * Fix: META redirects were not XHTML-compliant
 * Fix: $g_lang_current was not available to custom_strings_inc.php
 * Fix: reduced the executed number of queries throughout the interface
 * Fix #2939: Confusing file names for uploaded project documents.
 * Fix #2954: Bgcolor attribute on TD in view_all_bug_page (moved to TR) [optimisation]
 * Fix #2956: db_insert_id() did not use mysql_insert_id(), but executed another query (which is probably slower)
 * Fix #2964: proj_doc_add.php is empty if document file already exists
 * Fix #2967: Make bugnotes visible while updating bugs (updating, resolving, and closing)
 * Fix #2968: Add query counts to action pages.
 * Fix #2969: Bug not found error when deleting a bugnote.
 * Fix #2970: Sending a reminder sends two notifications.
 * Fix #2974: Message "APPLICATION WARNING #300" on main page.
 * Fix #2982: Having email_set_category set to EMAIL_CATEGORY_PROJECT_CATEGORY erased various mail headers.
 * Languages: Updated German localisation.

2003.02.19  -  0.18.0a2

 * Behaviour change: Project documentation is now sorted by title
 * Enhancement: Project name is shown in print_bug_page
 * Fix: #2938: 'Double quotes not handled correctly in manage_custom_field_edit_page' 
 * Fix: handle special characters correctly in the rest of the manage_custom_field_* pages
 * Fix: #2937: 'Double quotes not handled correctly in version names'
 * Fix: #2936: 'SYSTEM WARNING: ob_gzhandler() used twice'
 * Fix: #2941: Checking that project upload path exists and is writable to webserver
 * Fix: #2943: Document title should be mandatory
 * Fix: #2949: News title and body should be mandatory.
 * Fix: #2952: Email address of news poster always visible.
 * Fix: at various places, the currently selected project (as specified by the cookie) was used instead of i.e. a bug's project