@@ -6,7 +6,7 @@
 	# See the README and LICENSE files for details
 
 	# --------------------------------------------------------
-	# $Id: helper_api.php,v 1.39 2003-02-20 13:19:29 vboctor Exp $
+	# $Id: helper_api.php,v 1.40 2003-02-20 16:48:23 jlatour Exp $
 	# --------------------------------------------------------
 
 	###########################################################################
@@ -151,6 +151,7 @@
 		}
 
 		if ( ! project_exists( $t_project_id ) ||
+			 0 == project_get_field( $t_project_id, 'enabled' ) ||
 			 ! access_has_project_level( VIEWER, $t_project_id ) ) {
 			$t_project_id = 0;
 		}
