@@ -6,9 +6,11 @@ Mantis ChangeLog
  * Fix: META redirects were not XHTML-compliant
  * Fix: $g_lang_current was not available to custom_strings_inc.php
  * Fix: reduced the executed number of queries throughout the interface
+ * Fix: improved handling of bad cookies (you now get a chance to log in again)
  * Fix #2939: Confusing file names for uploaded project documents.
  * Fix #2954: Bgcolor attribute on TD in view_all_bug_page (moved to TR) [optimisation]
  * Fix #2956: db_insert_id() did not use mysql_insert_id(), but executed another query (which is probably slower)
+ * Fix #2961: A disabled project can not be the currently selected project
  * Fix #2964: proj_doc_add.php is empty if document file already exists
  * Fix #2967: Make bugnotes visible while updating bugs (updating, resolving, and closing)
  * Fix #2968: Add query counts to action pages.
